...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/character_name_text_view"
            tools:text="BBY 14" />


        <ImageButton
            android:id="@+id/more_info_arrow_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/background_light"
            android:contentDescription="@string/content_description_more_info_arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
...
