...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/title_settings"
        app:titleTextAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

    <androidx.cardview.widget.CardView
        android:id="@+id/about_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="openAboutActivity"
...
